# MuniciPal

./: .env.example  .gitignore  CLAUDE.md  README.md  REFERENCE.md  ROADMAP.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_fix_vector_extension.py
apps/citizen/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/citizen/messages/: en.json  es.json
apps/staff/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
config/: approval_policies.yml  auth_fixtures.yml  bridge_adapters.yml  cross_field_rules.yml  data_classification.yml  deadline_rules.yml  fee_schedules.yml  inconsistency_rules.yml  notification_templates.yml  redaction_rules.yml
config/i18n/: en.yml  es.yml
config/wizards/: foia_request.yml  permit_application.yml  service_request_311.yml
data/sample_ordinances/: building_permits.md  noise_ordinance.md  public_records.md  trash_collection.md  utility_billing.md
docs/: FEATURES.md  TECHNICAL_REFERENCE.md
eval/golden_datasets/: sample.json
scripts/: generate-openapi.sh  run_eval.py  scrape_municode.py  seed_demo_data.py  seed_knowledge.py  setup_infra.sh
src/: test_chat_crash.py  test_retrieval.py
src/municipal/: __init__.py
tests/: conftest.py  test_311_adapter.py  test_app_postgres_wiring.py  test_auth_integration.py  test_auth_provider.py  test_bridge.py  test_bridge_api.py  test_case_memory.py  test_chat.py  test_classification.py  test_cross_field_validation.py  test_db_engine.py  test_db_models.py  test_eval_harness.py  test_export.py  test_finance_api.py  test_finance_fees.py  test_finance_pdf.py  test_finance_taxes_deadlines.py  test_gis.py  test_governance.py  test_graph.py  test_i18n.py  test_identity_upgrade.py  test_inconsistency.py  test_intake_api.py  test_intake_engine.py  test_intake_validation.py  test_llm_client.py  test_mission_control.py  test_mission_control_v1.py  test_mission_control_v2.py  test_model_manager.py  test_notification_api.py  test_notifications.py  test_postgres_audit.py  test_postgres_feedback.py  test_postgres_graph.py  test_postgres_intake.py  test_postgres_notifications.py  (+12 more)
(+167 files in other folders)
